<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.harshitha.testingdemo.MainActivity">

    <EditText
        android:id="@+id/inputField"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="212dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="33dp"
        app:layout_constraintBottom_toTopOf="@+id/switchActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="36dp"
        android:layout_marginLeft="37dp" />

    <Button
        android:id="@+id/changeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="173dp"
        android:layout_marginEnd="81dp"
        android:layout_marginTop="211dp"
        android:onClick="onClick"
        android:text="Edit text "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/switchActivity"
        app:layout_constraintTop_toBottomOf="@+id/inputField"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="81dp" />

    <Button
        android:id="@+id/switchActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="172dp"
        android:layout_marginEnd="36dp"
        android:onClick="onClick"
        android:text="Change Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="36dp" />

</android.support.constraint.ConstraintLayout>
